# ENSAI-2A-projet-info

./: .gitignore  README.md  insert_cocktails.sql  main.py  pyproject.toml  requirements.txt
data/: de_json_a_sql_cocktails.py  de_json_a_sql_ing.py  de_json_a_sql_linked_ic.py  init_db.sql  pop_db.sql  pop_db_test.sql  testing_debug.py
doc/: Diagramme de Gantt Projet info.xlsx  diag_cas_utilisation.txt  diag_cas_utilisation_avec_fonctionnalités_supplémentaires  diag_classes.md  diag_classes_business.md  diag_classes_object.md  diag_ecran.md  diag_sequence.md  exemple_fichier_cocktail.json  exemple_typejson.txt  idées.md  suivi.md
doc/diagrammes/: diag_cas_utilisation.txt
doc/suivi/: 2024.09.13-semaine1.md  2025.09.11-semaine2.md  2025.09.18-semaine3.md  2025.09.25-semaine4.md  2025.09.4-semaine1.md  2025.10.16-semaine7.md  2025.10.2-semaine5.md  2025.10.23-semaine8.md  2025.10.9-semaine6.md  2025.11.06-semaine9.md  2025.11.13-semaine10.md  2025.11.20-semaine11.md
extractAPI/: all_cocktails_consolidated BRUT.json  all_cocktails_consolidated.json  all_ingredients_consolidated.json  extraction_cocktails_id.py  extraction_ingredient_id.py  get_file.py  get_file_by_id.py  tri_cles.py
extractAPI/extract_cocktails/: cocktail_11000.json  cocktail_11001.json  cocktail_11002.json  cocktail_11003.json  cocktail_11004.json  cocktail_11005.json  cocktail_11006.json  cocktail_11007.json  cocktail_11008.json  cocktail_11009.json  cocktail_11010.json  cocktail_11011.json  cocktail_11012.json  cocktail_11013.json  cocktail_11014.json  cocktail_11016.json  (+620 more)
src/: main.py
(+564 files in other folders)
